--- a/RENAVTO/RENAVTO/store/templates/index.html
+++ b/RENAVTO/RENAVTO/store/templates/index.html
@@ -5,16 +5,15 @@
 {% block content %}
     <section class="welcome_area bg-img background-overlay" style="background-image: url(../static/img/bg-img/bg-1.jpg);">
         <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="hero-content">
+            <div class="row h-100 align-items-center" style="justify-content: space-between;">
+                <div class="hero-content">
                         <ul>
-                            <li><h3>Доставляємо по всій Україні</h3></li>
-                            <li><h3>Сервіс автомобілів</h3></li>
-                            <li><h3>Запчастини до всіх моделей RENAULT</h3></li>
+                            <li><h4>Доставляємо по всій Україні</h4></li>
+                            <li><h4>Сервіс автомобілів</h4></li>
+                            <li><h4>Запчастини до більшості моделей RENAULT</h4></li>
                         </ul>
-                    </div>
                 </div>
+                {% include 'sidebar.html' %}
             </div>
         </div>
     </section>
