--- a/RENAVTO/RENAVTO/store/static/css/nice-select.css
+++ b/RENAVTO/RENAVTO/store/static/css/nice-select.css
@@ -17,7 +17,7 @@
     padding-left: 18px;
     padding-right: 30px;
     position: relative;
-    text-align: left !important;
+    text-align: center !important;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     -webkit-user-select: none;
@@ -72,6 +72,8 @@
     -webkit-transform: scale(1) translateY(0);
     -ms-transform: scale(1) translateY(0);
     transform: scale(1) translateY(0);
+    max-height: 200px;
+    overflow-y: scroll !important;
 }
 
 .nice-select.disabled {
