--- a/RENAVTO/RENAVTO/store/templates/checkout.html
+++ b/RENAVTO/RENAVTO/store/templates/checkout.html
@@ -4,7 +4,7 @@
 <body>
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb_area bg-img"  style="background-image: url(novaposta.jpeg)">
+    <div class="breadcumb_area bg-img"  style="background-image: url(../static/img/bg-img/bg_novaposhta.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -55,7 +55,6 @@
                                 <label for="first_name">Оплата:</label>
                             </div>
                             <input type="submit" class="btn essence-btn" value="У відділені">
-                            <input type="submit" class="btn essence-btn" value="Самовивіз">
                         </form>
                     </div>
                 </div>
