--- a/RENAVTO/RENAVTO/store/templates/shop.html
+++ b/RENAVTO/RENAVTO/store/templates/shop.html
@@ -4,7 +4,7 @@
 {% block content %}
 <body>
     <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb_area bg-img img-category" style="background-image: url(../static/img/bg-img/bg-1.png)">
+    <div class="breadcumb_area bg-img img-category" style="background-image: url(../static/img/bg-img/bg_for_parts.png)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -40,26 +40,39 @@
                         <div class="row">
                             <!-- Single Product -->
                             {% for product in object_list %}
-                                <div class="col-12 col-sm-6 col-lg-4 ">
-                                <div  class="single-product-wrapper border-1">
+                                <div class="col-12 col-sm-6 col-lg-4 " id="{{product.id}}" >
+                                <div class="single-product-wrapper border-1">
                                     <!-- Product Image -->
-                                    <div  class="product-img">
-                                        <img style="width: 255px;height: 255px;" src="{{product.image.url }}" alt="">
-                                        <a href="{% url 'Auto_part_det' %}{{product.id}}"></a>
+                                    <div class="product-img">
+                                        <img style="width: 255px;height: 255px;padding: 25px;" src="{{product.image.url }}" alt="">
                                         <!-- Product Badge -->
-                                        <div class="product-badge offer-badge">
-                                            <span>-30%</span>
-                                        </div>
+                                        {% if product|is_product_new %}
+                                         <div class="product-badge new-badge">
+                                              <span>New</span>
+                                         </div>
+                                        {% endif %}
                                         <!-- Favourite -->
                                         <div class="product-favourite">
-                                            <a href="#" class="favme fa fa-heart"></a>
+                                            <form action="{% url 'add_deadd_something_from_favorite' %}" method="POST">
+                                                {% csrf_token %}
+                                                <input hidden type="text" name="product_for_favorite" value="{{product.id}}">
+                                                <input hidden type="text" name="next" value="{{ request.path }}">
+                                                <button class="favme fa fa-heart" style="position: absolute;height: 25px;width: 45px;font-size: 14px;color: #ccc;top: 20px;right: 20px;z-index: 10;line-height: 25px;background-color: #ffffff;box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);text-align: center;" type="submit">
+                                                </button>
+                                            </form>
                                         </div>
                                     </div>
 
                                     <!-- Product Description -->
                                     <div class="product-description">
                                         <span class="pad">{{product.serial_number}}</span>
-                                         <a href="{% url 'Auto_part_det' %}{{product.id}}">
+                                        <span class="pad">{{product.produced_by}}</span>
+                                        {% if product.state %}
+                                            <span class="pad">Б/У</span>
+                                        {% else %}
+                                            <span class="pad">Новий</span>
+                                        {% endif %}
+                                        <a href="{% url 'Auto_part_det' %}{{product.id}}">
                                             <h6 class="h6 pad">{{product.name}}</h6>
                                         </a>
                                         <p class="product-price pad">{{ product.price}} грн.</p>
@@ -69,14 +82,14 @@
                                             <!-- Add to Cart -->
                                             {% if product|is_in_cart:request.session.cart  %}
                                                 <div class="row nu-gutters bg-light">
-                                                    <form action="#{{product.id}}" class="" method="post">
+                                                    <form action="#{{product.id}}" method="post">
                                                         {% csrf_token %}
                                                         <input hidden type="text" name="product" value="{{product.id}}">
                                                         <input hidden type="text" name="remove" value="True">
                                                         <input type="submit" value=" - " class="btn btn-block btn-secondary">
                                                     </form>
                                                         <div class="text-center col">{{ product|cart_quantity:request.session.cart }}</div>
-                                                    <form action="#{{product.id}}" class="" method="post">
+                                                    <form action="#{{product.id}}" method="post">
                                                         {% csrf_token %}
                                                         <input type="hidden" name="product" value="{{product.id}}">
                                                         <input type="submit" value=" + " class="btn btn-block btn-secondary">
