--- a/RENAVTO/RENAVTO/store/static/css/core-style.css
+++ b/RENAVTO/RENAVTO/store/static/css/core-style.css
@@ -23,16 +23,16 @@
   background: rgba(179, 247, 132, 0.4);
 }
 .nova_post{
-    background-image: url(novaposta.jpeg)
+    background-image: url(bg_novaposta.png)
 }
 .img-category{
   background-image: url(category.jpeg);
 }
 .img_not_found{
-  background-image: url(avto.jpg);
+  background-image: url(../img/bg-img/avto.jpg);
 }
 .img_types{
-  background-image: url(types.jpg);
+  background-image: url(../img/bg-img/bg_for_types.jpg);
 }
 * {
   margin: 0;
@@ -42,7 +42,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   background-color: #efefef;
-  background: url("../img/bg-img/Logo50.png") border-box no-repeat center;
+  background: url("../img/bg-img/Logo50.png") border-box no-repeat bottom;
   margin-top: 85px; }
   @media only screen and (max-width: 767px) {
     body {
@@ -50,7 +50,6 @@ body {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
@@ -58,6 +57,17 @@ h6 {
   line-height: 1.3;
   font-weight: 700;
   font-family: "Ubuntu", sans-serif; }
+h3{
+  color: #000000;
+  line-height: 1.3;
+  font-weight: 700;
+  font-family: "Ubuntu", sans-serif;}
+  @media only screen and (max-width: 767px){
+    #h3{
+     font-size:20px;
+    }
+  }
+
 
 p {
   color: #424242;
@@ -437,7 +447,6 @@ img {
   left: 0;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1050; }
-
 /* Cart Area CSS */
 .right-side-cart-area {
   position: fixed;
@@ -654,7 +663,236 @@ img {
           width: 140px;
           padding: 0 15px; } }
           /* cartend */
-          
+
+
+
+/* favourite*/
+.favourite-bg-overlay.favourite-bg-overlay-on {
+  -webkit-transition-duration: 1000ms;
+  transition-duration: 1000ms;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1050; }
+.right-side-favourite-area {
+  position: fixed;
+  width: 670px;
+  height: 100%;
+  top: 0;
+  right: -800px;
+  background-color: #ffffff;
+  z-index: 1100;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 800ms;
+  transition-duration: 800ms; }
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .right-side-favourite-area {
+      width: 500px;
+      right: -600px; } }
+  @media only screen and (max-width: 767px) {
+    .right-side-favourite-area {
+      width: 270px;
+      right: -400px; } }
+  @media only screen and (min-width: 576px) and (max-width: 767px) {
+    .right-side-favourite-area {
+      width: 400px;
+      right: -550px; } }
+  .right-side-favourite-area.favourite-on {
+    right: 0; }
+  .right-side-favourite-area .cart-button a {
+    position: absolute;
+    top: 0;
+    right: 100%;
+    z-index: 100;
+    width: 90px;
+    display: block;
+    text-align: center;
+    border-left: 1px solid #ebebeb;
+    height: 85px;
+    line-height: 80px;
+    background-color: #f5f7f9; }
+    @media only screen and (max-width: 767px) {
+      .right-side-favourite-area .cart-button a {
+        width: 50px;
+        height: 50px;
+        line-height: 50px; } }
+    .right-side-favourite-area .cart-button a img {
+      max-width: 20px; }
+    .right-side-favourite-area .cart-button a span {
+      font-family: "Ubuntu", sans-serif;
+      font-size: 18px;
+      color: #fff;
+      font-weight: 700;
+      position: absolute;
+      top: -10px; }
+  .right-side-favourite-area .favourite-content {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100%; }
+    .right-side-favourite-area .favourite-content .favourite-list {
+      position: relative;
+      z-index: 10;
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 190px;
+      flex: 0 0 190px;
+      width: 190px; }
+      @media only screen and (max-width: 767px) {
+        .right-side-favourite-area .favourite-content .favourite-list {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+          width: 100px; } }
+      @media only screen and (min-width: 576px) and (max-width: 767px) {
+        .right-side-favourite-area .cart-content .cart-list {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 150px;
+          flex: 0 0 150px;
+          width: 150px; } }
+      .right-side-favourite-area .cart-content .cart-list .single-cart-item {
+        position: relative;
+        z-index: 1;
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms; }
+        .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image {
+          position: relative;
+          z-index: 1;
+          display: block; }
+          .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 50px 15px 15px;
+            -webkit-transition-duration: 500ms;
+            transition-duration: 500ms; }
+            @media only screen and (max-width: 767px) {
+              .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc {
+                padding: 5px; } }
+            @media only screen and (min-width: 576px) and (max-width: 767px) {
+              .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc {
+                padding: 30px 20px; } }
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .product-remove {
+              position: absolute;
+              top: 15px;
+              right: 15px;
+              color: #ffffff;
+              font-size: 12px;
+              padding: 5px; }
+              @media only screen and (max-width: 767px) {
+                .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .product-remove {
+                  top: 5px;
+                  right: 5px; } }
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .badge {
+              display: block;
+              font-weight: 600;
+              font-size: 10px;
+              color: rgba(255, 255, 255, 0.5);
+              text-transform: uppercase;
+              margin-bottom: 5px;
+              text-align: left;
+              padding: 0; }
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc h6 {
+              font-size: 12px;
+              color: #ffffff;
+              text-transform: capitalize;
+              margin-bottom: 30px; }
+              @media only screen and (max-width: 767px) {
+                .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc h6 {
+                  margin-bottom: 10px; } }
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .size,
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .color {
+              display: block;
+              font-weight: 600;
+              font-size: 10px;
+              color: rgba(255, 255, 255, 0.5);
+              text-transform: uppercase;
+              margin-bottom: 5px;
+              line-height: 1; }
+            .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .price {
+              font-family: "Ubuntu", sans-serif;
+              font-size: 16px;
+              font-weight: 700;
+              margin-bottom: 0;
+              margin-top: 30px;
+              color: #ffffff; }
+              @media only screen and (max-width: 767px) {
+                .right-side-favourite-area .cart-content .cart-list .single-cart-item .product-image .cart-item-desc .price {
+                  margin-top: 10px;
+                  font-size: 12px; } }
+        .right-side-favourite-area .cart-content .cart-list .single-cart-item:hover .product-image .cart-item-desc {
+          background-color: rgba(0, 0, 0, 0.8); }
+    .right-side-favourite-area .cart-content .cart-amount-summary {
+      padding: 100px 10%;
+      position: relative;
+      z-index: 10;
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 calc(100% - 190px);
+      flex: 0 0 calc(100% - 190px);
+      width: calc(100% - 190px); }
+      @media only screen and (max-width: 767px) {
+        .right-side-favourite-area .cart-content .cart-amount-summary {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 calc(100% - 100px);
+          flex: 0 0 calc(100% - 100px);
+          width: calc(100% - 100px);
+          padding: 50px 15px; } }
+      @media only screen and (min-width: 576px) and (max-width: 767px) {
+        .right-side-favourite-area .cart-content .cart-amount-summary {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 calc(100% - 150px);
+          flex: 0 0 calc(100% - 150px);
+          width: calc(100% - 150px);
+          padding: 50px 30px; } }
+      .right-side-favourite-area .cart-content .cart-amount-summary h2 {
+        font-size: 30px;
+        margin-bottom: 100px; }
+        @media only screen and (max-width: 767px) {
+          .right-side-favourite-area .cart-content .cart-amount-summary h2 {
+            font-size: 24px;
+            margin-bottom: 30px; } }
+        @media only screen and (max-width: 767px) {
+          .right-side-favourite-area .cart-content .cart-amount-summary h2 {
+            font-size: 30px;
+            margin-bottom: 50px; } }
+      .right-side-favourite-area .cart-content .cart-amount-summary .summary-table li {
+        margin-bottom: 20px;
+        color: #000000;
+        font-size: 14px;
+        letter-spacing: 0.75px;
+        text-transform: uppercase;
+        font-weight: 600;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between; }
+        @media only screen and (max-width: 767px) {
+          .right-side-favourite-area .cart-content .cart-amount-summary .summary-table li {
+            font-size: 12px;
+            margin-bottom: 10px; } }
+        @media only screen and (min-width: 576px) and (max-width: 767px) {
+          .right-side-favourite-area .cart-content .cart-amount-summary .summary-table li {
+            font-size: 14px;
+            margin-bottom: 15px; } }
+        .right-side-favourite-area .cart-content .cart-amount-summary .summary-table li span:last-child {
+          font-weight: 700;
+          font-family: "Ubuntu", sans-serif; }
+      @media only screen and (max-width: 767px) {
+        .right-side-favourite-area .cart-content .cart-amount-summary .essence-btn {
+          min-width: 140px;
+          width: 140px;
+          padding: 0 15px; } }
+          /* cartend */
+
 
 /* :: 5.0 Welcome Area CSS */
 .welcome_area {
