--- a/RENAVTO/RENAVTO/store/templates/auto_part_detail.html
+++ b/RENAVTO/RENAVTO/store/templates/auto_part_detail.html
@@ -10,12 +10,16 @@
         <!-- Single Product Thumb -->
         <div class="single_product_thumb clearfix">
             <div class="product_thumbnail_slides owl-carousel">
-                <img class="img_product" src="{{auto_part.image.url }}" alt="">
+                <img class="img_product" src="{{auto_part.image.url}}" alt="">
                 {% if auto_part.image_2 %}
                     <img class="img_product" src="{{auto_part.image_2.url }}" alt="">
+                {% else %}
+                <img class="img_product" src="{{auto_part.image.url}}" alt="">
                 {% endif %}
                 {% if auto_part.image_3 %}
                     <img class="img_product" src="{{auto_part.image_3.url }}" alt="">
+                {% else %}
+                <img class="img_product" src="{{auto_part.image.url}}" alt="">
                 {% endif %}
             </div>
             <div class="img_center">
@@ -93,19 +97,5 @@
         </div>
     {% include 'top_products.html' %}
     </section>
-
-    <!-- jQuery (Necessary for All JavaScript Plugins) -->
-    <script src="js/jquery/jquery-2.2.4.min.js"></script>
-    <!-- Popper js -->
-    <script src="js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Plugins js -->
-    <script src="js/plugins.js"></script>
-    <!-- Classy Nav js -->
-    <script src="js/classy-nav.min.js"></script>
-    <!-- Active js -->
-    <script src="js/active.js"></script>
-
 </body>
 {% endblock %}
