--- a/RENAVTO/RENAVTO/store/templates/car_models.html
+++ b/RENAVTO/RENAVTO/store/templates/car_models.html
@@ -4,7 +4,7 @@
 {% block content %}
 <body>
     <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb_area bg-img img_not_found">
+    <div class="breadcumb_area bg-img" style="background-image: url(../static/img/bg-img/avto.jpg)">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -21,7 +21,8 @@
     <section class="shop_grid_area section-padding-80">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-8 col-lg-9">
+                {% include 'sidebar.html' %}
+                <div class="col-12 col-md-8 col-lg-9" style="margin-top: 25px">
                     <div class="shop_grid_product_area">
                         <div class="row">
                             <!-- Single Product -->
@@ -31,7 +32,7 @@
                                 <div  class="single-product-wrapper border-1">
                                     <!-- Product Image -->
                                     <div class="product-img">
-                                        <img style="width: 255px;height: 255px;" src="{{model.img_of_model.url }}" alt="">
+                                        <img style="padding: 25px; max-height: 253px" src="{{model.img_of_model.url }}" alt="">
                                     </div>
                                     <!-- Product Description -->
                                     <div class="product-description">
