--- a/RENAVTO/RENAVTO/store/templates/index.html
+++ b/RENAVTO/RENAVTO/store/templates/index.html
@@ -6,47 +6,47 @@
     <section class="welcome_area bg-img background-overlay" style="background-image: url(../static/img/bg-img/bg-1.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center" style="justify-content: space-between;">
-                <div class="hero-content">
-                        <ul>
-                            <li><h4>Доставляємо по всій Україні</h4></li>
-                            <li><h4>Сервіс автомобілів</h4></li>
-                            <li><h4>Запчастини до більшості моделей RENAULT</h4></li>
+                <div class="hero-content" style="max-width: 50%">
+                        <ul style="margin-left: 20px;">
+                            <li><h4 style="font-size: calc(10px + 20 * (100vw / 1280));">Доставляємо по всій Україні</h4></li>
+                            <li><h4 style="font-size: calc(10px + 20 * (100vw / 1280));">Сервіс автомобілів</h4></li>
+                            <li><h4 style="font-size: calc(10px + 20 * (100vw / 1280));">Запчастини до більшості моделей RENAULT</h4></li>
                         </ul>
                 </div>
-                {% include 'sidebar.html' %}
             </div>
         </div>
     </section>
     <!-- ##### Welcome Area End ##### -->
 
     <!-- ##### Top Catagory Area Start ##### -->
-    <div class="top_catagory_area section-padding-80 clearfix">
+    <div class="shop_grid_area section-padding-80">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row">
+                {% include 'sidebar.html' %}
+                    <div class="col-12 col-md-8 col-lg-9">
+                        <div class="shop_grid_product_area">
+                            <div class="row" style="justify-content: space-around;">
                 <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div href="#" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/RenaultLogo.jpg);">
+                    <div href="#" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/RenaultLogo.png); margin: 25px;max-width: 350px;height: 200px; box-shadow: 10px 5px 5px #a1a1a1;border: 1px solid #b6b4b4;">
                         <div href="#" class="catagory-content">
                             <a  href="store/Renault">RENAULT</a>
                         </div>
                     </div>
-                </div>
                 <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div href="#" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/DaciaLogo.jpg);">
+                    <div href="#" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/DaciaLogo.png);margin: 25px;max-width: 350px;height: 200px; box-shadow: 10px 5px 5px #a1a1a1;border: 1px solid #b6b4b4;">
                         <div href="#" class="catagory-content">
                             <a href="store/Dacia">DACIA</a>
                         </div>
                     </div>
-                </div>
                 <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
-                    <div href="shop.html" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/NissanLogo.jpg);">
+                    <div href="shop.html" class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(../static/img/bg-img/NissanLogo.png); margin: 25px;max-width: 350px;height: 200px; box-shadow: 10px 5px 5px #a1a1a1;border: 1px solid #b6b4b4;">
                         <div href="shop.html" class="catagory-content">
                             <a href="store/Nissan">NISSAN</a>
                         </div>
                     </div>
-                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
