--- a/RENAVTO/RENAVTO/store/templates/sidebar.html
+++ b/RENAVTO/RENAVTO/store/templates/sidebar.html
@@ -29,9 +29,9 @@
     });
 </script>
 <div class="col-12 col-md-4 col-lg-3">
-    <div class="shop_sidebar_area" style="padding:10px;background: #ffff;width: 270px;box-shadow: 10px 5px 5px #a1a1a1; border: 1px solid #b6b4b4;">
+    <div class="shop_sidebar_area" style="padding:10px;background: #ffff;width: 100%;margin-bottom: 25px;box-shadow: 10px 5px 5px #a1a1a1; border: 1px solid #b6b4b4;">
         <div class="filter">
-            <img src="{% static 'img/bg-img/Vector.png'%}"><h6>Фільтр запчастин</h6>
+            <img src="{% static 'img/bg-img/Vector.png'%}"><h6 style="margin-bottom: 0px;">Фільтр запчастин</h6>
         </div>
         <!-- ##### Single Widget ##### -->
         <form method="post" name="sidebar_filter" action="{% url 'side_filter' %}" id="indexForm">
@@ -44,7 +44,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="select-box d-flex mt-50 mb-30">
+            <div class="select-box d-flex mb-30">
                 <select class="w-100" name="model" id="model">
                         <option value="default" selected>Виберіть модель</option>
                     {% for model in models_filt %}
@@ -68,7 +68,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <input  class="btn essence-btn" type="submit" value="ПОШУК">
+            <input style="width: 100%"  class="btn essence-btn" type="submit" value="ПОШУК">
         </form>
     </div>
     </div>
