--- a/RENAVTO/RENAVTO/store/templates/auto_part_detail.html
+++ b/RENAVTO/RENAVTO/store/templates/auto_part_detail.html
@@ -9,17 +9,17 @@
 
         <!-- Single Product Thumb -->
         <div class="single_product_thumb clearfix">
-            <div class="product_thumbnail_slides owl-carousel">
-                <img class="img_product" src="{{auto_part.image.url}}" alt="">
+            <div class="product_thumbnail_slides owl-carousel" style="max-height: 600px;">
+                <img class="img_product" src="{{auto_part.image.url}}" style="max-height: 600px;" alt="">
                 {% if auto_part.image_2 %}
-                    <img class="img_product" src="{{auto_part.image_2.url }}" alt="">
+                    <img class="img_product" src="{{auto_part.image_2.url }}" style="max-height: 600px;" alt="">
                 {% else %}
-                <img class="img_product" src="{{auto_part.image.url}}" alt="">
+                <img class="img_product" src="{{auto_part.image.url}}" style="max-height: 600px;" alt="">
                 {% endif %}
                 {% if auto_part.image_3 %}
-                    <img class="img_product" src="{{auto_part.image_3.url }}" alt="">
+                    <img class="img_product" src="{{auto_part.image_3.url }}" style="max-height: 600px;" alt="">
                 {% else %}
-                <img class="img_product" src="{{auto_part.image.url}}" alt="">
+                <img class="img_product" src="{{auto_part.image.url}}" style="max-height: 600px;" alt="">
                 {% endif %}
             </div>
             <div class="img_center">
@@ -79,9 +79,28 @@
                     {% endif %}
                     <!-- Favourite -->
                     <div class="product-favourite ml-4">
-                        <a href="#" class="favme fa fa-star"></a>
+                        <form action="{% url 'add_deadd_something_from_favorite' %}" method="POST">
+                            {% csrf_token %}
+                            <input hidden type="text" name="product_for_favorite" value="{{auto_part.id}}">
+                            <input hidden type="text" name="next" value="{{ request.path }}">
+                            <button class="favme fa fa-star" type="submit">
+                            </button>
+                        </form>
                     </div>
                 </div>
+            <form action="{% url 'quick_successful' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-12 mb-3">
+                                    <label for="phone_number">Номер телефону</label>
+                                    <input id="phone_number" type="text" class="form-control" name="phone_number" min="0" max="15" value="" placeholder=" ">
+                                    <input hidden type="text" value="{{auto_part.id}}" name="auto_part_id">
+                                </div>
+                            </div>
+                            <input type="submit" class="btn essence-btn" value="Купити">
+                            {% csrf_token %}
+            </form>
+
         </div>
     </section>
     <!-- ##### Single Product Details Area End ##### -->
