--- a/RENAVTO/RENAVTO/store/templates/base/footer.html
+++ b/RENAVTO/RENAVTO/store/templates/base/footer.html
@@ -7,34 +7,41 @@
                     <div class="single_widget_area d-flex mb-30">
                         <!-- Logo -->
                         <div class="footer-logo mr-50">
-                            <a href="#"><img src="{% static 'img/core-img/logo2.png' %}" alt=""></a>
+                            <a href="/"><img src="{% static 'img/core-img/logo_footer.png'%}" style="opacity: 0.7" alt=""></a>
                         </div>
                         <!-- Footer Menu -->
                         <div class="footer_menu">
                             <ul>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="https://www.google.com.ua/maps/place/%D0%A6%D0%B5%D0%BD%D1%82%D1%80+%D0%BA%D1%83%D0%B7%D0%BE%D0%B2%D0%BD%D0%BE%D0%B3%D0%BE+%D1%80%D0%B5%D0%BC%D0%BE%D0%BD%D1%82%D1%83/@49.8832819,24.0845533,17.96z/data=!4m13!1m7!3m6!1s0x473adcbdcc32d287:0x6756731f1ef8a723!2z0LLRg9C7LiDQmy4g0KPQutGA0LDRl9C90LrQuCwg0JzQsNC70LXRhdGW0LIsINCb0YzQstGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjA!3b1!8m2!3d49.8827172!4d24.0861487!3m4!1s0x473adcbdd474bee1:0x8314d768b2cf3540!8m2!3d49.8829453!4d24.084921?hl=ru">Місцезнаходження</a></li>
+                                <li><a href="blog.html"></a></li>
+                                <li><a href="contact.html"></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <!-- Single Widget Area -->
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6" style="max-width: 25%">
                     <div class="single_widget_area mb-30">
-                        <ul class="footer_widget_menu">
-                            <li><a href="#">Order Status</a></li>
-                            <li><a href="#">Payment Options</a></li>
-                            <li><a href="#">Shipping and Delivery</a></li>
-                            <li><a href="#">Guides</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Use</a></li>
+                        <ul>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">Час роботи:</a></li>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">Пн.-Пт.:9:00-18:00</a></li>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">Субота:9:00-14:00</a></li>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">Неділя:Вихідний</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6" style="max-width: 25%">
+                    <div class="single_widget_area mb-30">
+                        <ul>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">+38 067 941 30 13</a></li>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">+38 095 932 17 30</a></li>
+                            <li><a style="color: rgba(255, 255, 255, 0.6)">+38 063 854 04 41</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="row align-items-end">
+            <div class="row align-items-end" hidden>
                 <!-- Single Widget Area -->
                 <div class="col-12 col-md-6">
                     <div class="single_widget_area">
