--- a/RENAVTO/RENAVTO/store/templates/part_category.html
+++ b/RENAVTO/RENAVTO/store/templates/part_category.html
@@ -4,7 +4,7 @@
 {% block content %}
 <body>
     <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb_area bg-img" style="background-image: url(../static/img/bg-img/bg_for_category.png);">
+    <div class="breadcumb_area bg-img" style="background-color: #D5A62EFF">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
