--- a/RENAVTO/RENAVTO/store/templates/base/header.html
+++ b/RENAVTO/RENAVTO/store/templates/base/header.html
@@ -6,6 +6,11 @@
             <nav class="classy-navbar" id="essenceNav">
                 <!-- Logo -->
                 <a class="nav-brand" href="/"><img src="{% static 'img/core-img/logo.png'%}" alt=""></a>
+                <ul>
+                            <li><a style="color: #787878">+38 067 941 30 13</a></li>
+                            <li><a style="color: #787878">+38 095 932 17 30</a></li>
+                            <li><a style="color: #787878">+38 063 854 04 41</a></li>
+                </ul>
                 <!-- Navbar Toggler -->
             </nav>
 
@@ -14,7 +19,7 @@
                 <!-- Search Area -->
                 <div class="search-area">
                     <form action="{% url 'search' %}" method="get">
-                        <input id="search_box" type="text" name="search_box" placeholder="Пошук">
+                        <input id="search_box" type="text" name="search_box" style="color:#000" placeholder="Пошук по серійному номеру">
                         <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                     </form>
                 </div>
@@ -184,7 +189,7 @@
         </div>
                     {% endfor %}
         {% else %}
-            <h3 style="margin: auto;font-size:20px;">У вас немає нічого в улюблених</h3>
+        <h3 style="margin: auto;font-size:20px;">У вас немає нічого в улюблених</h3>
         {% endif %}
     </div>
     </div>
