--- a/RENAVTO/RENAVTO/store/templates/base/footer.html
+++ b/RENAVTO/RENAVTO/store/templates/base/footer.html
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <!-- Single Widget Area -->
-                <div class="col-12 col-md-6" style="max-width: 25%">
+                <div class="col-12 col-md-6" style="max-width: 200px">
                     <div class="single_widget_area mb-30">
                         <ul>
                             <li><a style="color: rgba(255, 255, 255, 0.6)">Час роботи:</a></li>
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-md-6" style="max-width: 25%">
+                <div class="col-12 col-md-6" style="max-width: 200px">
                     <div class="single_widget_area mb-30">
                         <ul>
                             <li><a style="color: rgba(255, 255, 255, 0.6)">+38 067 941 30 13</a></li>
